--- a/CNN_model.ipynb
+++ b/CNN_model.ipynb
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[name: \"/device:CPU:0\"\ndevice_type: \"CPU\"\nmemory_limit: 268435456\nlocality {\n}\nincarnation: 12974437528384532104\n, name: \"/device:GPU:0\"\ndevice_type: \"GPU\"\nmemory_limit: 1264955392\nlocality {\n  bus_id: 1\n  links {\n  }\n}\nincarnation: 8305831064322333268\nphysical_device_desc: \"device: 0, name: GeForce GTX 680, pci bus id: 0000:01:00.0, compute capability: 3.0\"\n]\n"
+      "[name: \"/device:CPU:0\"\ndevice_type: \"CPU\"\nmemory_limit: 268435456\nlocality {\n}\nincarnation: 3458158467793970166\n, name: \"/device:GPU:0\"\ndevice_type: \"GPU\"\nmemory_limit: 1271033856\nlocality {\n  bus_id: 1\n  links {\n  }\n}\nincarnation: 14397545821718614318\nphysical_device_desc: \"device: 0, name: GeForce GTX 680, pci bus id: 0000:01:00.0, compute capability: 3.0\"\n]\n"
      ]
     }
    ],
@@ -53,11 +53,13 @@
    "outputs": [],
    "source": [
     "model_params = dict({'learning_rate': 0.005,\n",
-    "                     'num_epochs': 100,\n",
+    "                     'num_epochs': 20,\n",
     "                     'minibatch_size': 256,\n",
     "                     'accuracy_batch': 100,\n",
     "                     'print_cost': True,\n",
-    "                     'skip_steps': 5})\n"
+    "                     'plot_from_epoch': 5,\n",
+    "                     'save_weights': True,\n",
+    "                     })\n"
    ]
   },
   {
